fix: enviar gravacoes do composer como notas de voz